# Grok-Rust-SDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUTURE_FEATURES.md  LICENSE  README.md  TWITTER_ANNOUNCEMENT.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic_chat.rs  client_builder.rs  collections.rs  persistence.rs  retry.rs  sessions.rs  streaming.rs  tool_calling.rs
src/: chat.rs  client.rs  collections.rs  error.rs  lib.rs  persistence.rs  session.rs  tools.rs
tests/: integration_tests.rs
